--- a/index.html
+++ b/index.html
@@ -9,31 +9,15 @@
 <body>
     <div class="container">
         <h1>ลอยกระทงออนไลน์</h1>
-
-        <!-- เลือกตกแต่งกระทง -->
-        <div id="customization-section">
-            <h2>เลือกการตกแต่งกระทง</h2>
-            <div id="graphic-options">
-                <img src="images/adf.png" alt="กระทง 1" onclick="selectGraphic('graphic1.png')">
-                <img src="images/sdf.png" alt="กระทง 2" onclick="selectGraphic('graphic2.png')">
-                <img src="images/vd.png" alt="กระทง 3" onclick="selectGraphic('graphic3.png')">
-            </div>
+        <div id="form-container">
+            <input type="text" id="name" placeholder="กรอกชื่อของคุณ" required>
+            <input type="text" id="wish" placeholder="กรอกคำอวยพร" required>
         </div>
-
-        <!-- กรอกข้อมูลชื่อและคำอวยพร -->
-        <div id="info-section">
-            <h2>ใส่ชื่อและคำอวยพร</h2>
-            <input type="text" id="nameInput" placeholder="ชื่อของคุณ">
-            <textarea id="messageInput" placeholder="คำอวยพร"></textarea>
-            <button onclick="launchKrathong()">ลอยกระทง</button>
-        </div>
-
-        <!-- แสดงกระทงลอยบนแม่น้ำ -->
-        <div id="river-section">
-            <div id="krathong" class="hidden">
-                <img id="selectedGraphic" src="" alt="กระทง">
-                <p id="displayName"></p>
-                <p id="displayMessage"></p>
+        <button id="float-button">ลอยกระทง</button>
+        <div id="floating-container" style="display:none;">
+            <div class="kra-thong-wrapper">
+                <img src="images/adf.png" alt="กระทง" id="floating-kra-thong">
+                <p id="message"></p>
             </div>
         </div>
     </div>
