--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ลอยกระทงออนไลน์</title>
+    <title>ลอยกระทงออนไลน์กับเออร์โก</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>ลอยกระทงออนไลน์</h1>
+        <h1>ลอยกระทงออนไลน์กับเออร์โก</h1>
         <div id="form-container">
             <input type="text" id="name" placeholder="กรอกชื่อของคุณ" required>
             <input type="text" id="wish" placeholder="กรอกคำอวยพร" required>
@@ -16,7 +16,7 @@
         <button id="float-button">ลอยกระทง</button>
         <div id="floating-container" style="display:none;">
             <div class="kra-thong-wrapper">
-                <img src="images/adf.png" alt="กระทง" id="floating-kra-thong">
+                <img src="images/Krathong.png" alt="กระทง" id="floating-kra-thong">
                 <p id="message"></p>
             </div>
         </div>
